Foi corrigido o bug das jogadas de atributo relacionado ao modificar = 0

--- a/plugins/Shadow of the Weird Wizard/sheet.lfm
+++ b/plugins/Shadow of the Weird Wizard/sheet.lfm
@@ -7282,7 +7282,9 @@
 
             aflicoes = (debilitado) + (amedrontado) + (atordoado) + (cego) + (enfraquecido) + (envenenado) + (revesCombate)
 
-            if string.sub(modificador, 1, 1) == "+" then
+            if tonumber(modificador) ~= nil then
+                  modificador = tonumber(modificador)
+            elseif string.sub(modificador, 1, 1) == "+" then
                   modificador = tonumber(string.sub(modificador, 2))
             else
                   modificador = tonumber(string.sub(modificador, 2)) * -1
@@ -7352,7 +7354,9 @@
 
             aflicoes = (debilitado) + (amedrontado) + (atordoado) + (cego) + (enfraquecido) + (envenenado) + (revesCombate)
 
-            if string.sub(modificador, 1, 1) == "+" then
+            if tonumber(modificador) ~= nil then
+                  modificador = tonumber(modificador)
+            elseif string.sub(modificador, 1, 1) == "+" then
                   modificador = tonumber(string.sub(modificador, 2))
             else
                   modificador = tonumber(string.sub(modificador, 2)) * -1
@@ -7422,7 +7426,9 @@
 
             aflicoes = (debilitado) + (amedrontado) + (atordoado) + (cego) + (confuso) + (envenenado) + (revesCombate)
 
-            if string.sub(modificador, 1, 1) == "+" then
+            if tonumber(modificador) ~= nil then
+                  modificador = tonumber(modificador)
+            elseif string.sub(modificador, 1, 1) == "+" then
                   modificador = tonumber(string.sub(modificador, 2))
             else
                   modificador = tonumber(string.sub(modificador, 2)) * -1
@@ -7492,7 +7498,9 @@
 
             aflicoes = (debilitado) + (amedrontado) + (atordoado) + (cego) + (confuso) + (envenenado) + (revesCombate)
 
-            if string.sub(modificador, 1, 1) == "+" then
+            if tonumber(modificador) ~= nil then
+                  modificador = tonumber(modificador)
+            elseif string.sub(modificador, 1, 1) == "+" then
                   modificador = tonumber(string.sub(modificador, 2))
             else
                   modificador = tonumber(string.sub(modificador, 2)) * -1
